# outcome

./: .gitignore  Cargo.toml  build.rs
eventsourcing/: Cargo.toml
eventsourcing/src/: aggregate.rs  command_handler.rs  event.rs  event_envelop.rs  event_store.rs  lib.rs  postgres_event_store.rs  serialized_event.rs  sql_query_factory.rs
eventsourcing/src/aggregate/: aggregate.rs
eventsourcing/src/event/: event.rs  event_envelop.rs  mod.rs  serialized_event.rs
eventsourcing/src/projection/: error.rs  generic_projection.rs  mod.rs  projection.rs  view.rs  view_repository.rs
eventsourcing/src/repository/: event_store_repository.rs  mod.rs  postgres_event_store_repository.rs
eventsourcing/src/store/: aggregate_context.rs  event_store.rs  event_store_aggregate_context.rs  in_memory_event_store.rs  mod.rs  persisted_event_store.rs
eventsourcing/src/store/repository/: postgres_event_store_repository.rs  sql_query_factory.rs
outcome_manager/: Cargo.toml  build.rs
outcome_manager/proto/plan_outcome_predicting/v1/: plan_outcome.proto
outcome_manager/proto/planoutcome/v3/: plan.proto
outcome_manager/src/application/command/: add_primary_audience.rs  mod.rs
outcome_manager/src/domain/: audience.rs  core_kpi.rs  currency.rs  kpi.rs  mod.rs  reach_goal.rs  statistics.rs
outcome_manager/src/domain/service/: mod.rs  plan_service.rs  statistics_service.rs
outcome_manager/src/infrastructure/grpc_client/: mod.rs  plan_outcome_predicting.v1.rs  planbuild.v2.rs  planoutcome.v3.rs
proto/common/v1/: types.proto
proto/planbuild/v2/: planbuild.proto
proto/planoutcome/v3/: types.proto
src/application/: command_handler.rs  mod.rs  store.rs
src/application/command/: add_primary_audience.rs  mod.rs
src/domain/: aggregate.rs  audience.rs  core_kpi.rs  currency.rs  kpi.rs  mod.rs  reach_goal.rs  statistics.rs
src/domain/service/: mod.rs  plan_service.rs  repository.rs  statistics_service.rs
src/infrastructure/: mod.rs  postgres_store.rs
src/infrastructure/grpc_client/: common.v1.rs  mod.rs  plan_outcome_predicting.v1.rs  planbuild.v2.rs  planoutcome.v3.rs
