[package]
name = "outcome_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.31"
tonic = "0.10.1"
prost = "0.12.1"

[build-dependencies]
tonic-build = "0.10.1"
