[package]
name = "eventsourcing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
uuid = { version = "1.4.1", features = ["v4"] }
serde = { version = "1.0.188", features = ["derive"] }
async-trait = { version = "0.1.73", features = [] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"]  }
serde_json = "1.0.107"
futures = "0.3.28"
thiserror = "1.0.49"
